# zi300

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTIC_GUIDE.md  LICENSE  Makefile  README.md  STREAMING_TOOLS_README.md  __init__.py  branding.json  capacitor.config.json  config.json  diagnose_streaming.py  fix_streaming.py  key_gen.py  lighthouserc.js  logging_config.py  main.py  mjpeg_server.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_diagnostics.sh  startup.py  workbox-config.cjs
.github/: PULL_REQUEST_TEMPLATE.md
_archive/: README.md
android/: .gitignore
config/: README.md  __init__.py  apk_build.json  constants.py  default.yaml  license_storage.py  mobile_app.json  storage.py  versioning.py
core/: camera_manager.py  config.py  context.py  events.py  logging.py  retry_state.py  stats.py  tracker_manager.py
diagnostics/: registry.py  tests.py
docs/: alerts.md  architecture.md  camera_configuration.md  camera_preview.md  capture_error_codes.md  ci-troubleshooting.md  ci.md  config_examples.md  debug_endpoints.md  manual_phone_validation.md  models.md  ppe_anomaly_mapping.md  preflight.md  redis.md  streaming.md  troubleshooter.md  web-server.md  workers.md
keyring/: __init__.py  backend.py
migrations/: 0001_create_events_summaries.sql
models/: camera.py
modules/: __init__.py  alerts.py  base_camera.py  base_stream.py  camera_factory.py  detectors.py  duplicate_filter.py  email_utils.py  events_store.py  export.py  feedback_db.py  frame_bus.py  getinfo.py  gstreamer_stream.py  license.py  model_adapters.py  model_registry.py  pipeline.py  ppe_worker.py  profiler.py  registry.py  report_export.py  rtsp_client.py  rtsp_probe.py  stream_probe.py  troubleshooter_runner.py  utils.py  visitor_db.py
public/: dashboard.php  faiss.index
routers/: __init__.py  alerts.py  api_activity.py  api_identities.py  api_summary.py  api_training.py  auth.py  blueprints.py  cameras.py  config_api.py  dashboard.py  (+15 more)
(+361 files in other folders)
